{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 383,
  "lineage": "ec143734-ff3c-3e3b-5b98-8732ade21802",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "wp_private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-092b95b5648712503",
            "id": "rtb-092b95b5648712503",
            "owner_id": "058625519174",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wp_private"
            },
            "vpc_id": "vpc-0c2f25bd7ec679d6a"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "wp_elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:058625519174:loadbalancer/scruffybrett-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "scruffybrett-elb-1211301791.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "scruffybrett-elb",
            "idle_timeout": 400,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "scruffybrett-elb",
            "security_groups": [
              "sg-06ee1ae75a5eda40c"
            ],
            "source_security_group": "058625519174/wp_public_sg",
            "source_security_group_id": "sg-06ee1ae75a5eda40c",
            "subnets": [
              "subnet-0171529a4d619172e",
              "subnet-05cb45b74e0e8ca33"
            ],
            "tags": {
              "Name": "wp_scruffybrett-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.wp_public_sg",
            "aws_subnet.wp_public1_subnet",
            "aws_subnet.wp_public2_subnet",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wp_dev",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ba2e7a8c66dd5bd",
            "arn": "arn:aws:ec2:us-east-1:058625519174:instance/i-044b6f53218689cdb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "s3_access",
            "id": "i-044b6f53218689cdb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "blah",
            "monitoring": false,
            "primary_network_interface_id": "eni-0d81a36cac75c63c5",
            "private_dns": "ip-10-7-1-60.ec2.internal",
            "private_ip": "10.7.1.60",
            "public_dns": "ec2-34-201-0-134.compute-1.amazonaws.com",
            "public_ip": "34.201.0.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c6eb397278e9ce46",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05cb45b74e0e8ca33",
            "tags": {
              "Name": "wp_dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-076224e5115c8802c"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.s3_access_profile",
            "aws_iam_role.s3_access_role",
            "aws_key_pair.wp_auth",
            "aws_s3_bucket.code",
            "aws_security_group.wp_dev_sg",
            "aws_subnet.wp_public1_subnet",
            "aws_vpc.wp_vpc",
            "random_id.wp_code_bucket"
          ]
        },
        {
          "status": "tainted",
          "deposed": "48b3c739",
          "schema_version": 1,
          "dependencies": [
            "aws_iam_instance_profile.s3_access_profile",
            "aws_key_pair.wp_auth",
            "aws_s3_bucket.code",
            "aws_security_group.wp_dev_sg",
            "aws_subnet.wp_public1_subnet"
          ]
        },
        {
          "status": "tainted",
          "deposed": "55e3de5a",
          "schema_version": 1,
          "dependencies": [
            "aws_iam_instance_profile.s3_access_profile",
            "aws_key_pair.wp_auth",
            "aws_s3_bucket.code",
            "aws_security_group.wp_dev_sg",
            "aws_subnet.wp_public1_subnet"
          ]
        },
        {
          "status": "tainted",
          "deposed": "57291651",
          "schema_version": 1,
          "dependencies": [
            "aws_iam_instance_profile.s3_access_profile",
            "aws_key_pair.wp_auth",
            "aws_s3_bucket.code",
            "aws_security_group.wp_dev_sg",
            "aws_subnet.wp_public1_subnet"
          ]
        },
        {
          "status": "tainted",
          "deposed": "6e6f35e7",
          "schema_version": 1,
          "dependencies": [
            "aws_iam_instance_profile.s3_access_profile",
            "aws_iam_role.s3_access_role",
            "aws_key_pair.wp_auth",
            "aws_s3_bucket.code",
            "aws_security_group.wp_dev_sg",
            "aws_subnet.wp_public1_subnet",
            "aws_vpc.wp_vpc",
            "random_id.wp_code_bucket"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wp_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-09c667268598b8a16",
            "owner_id": "058625519174",
            "tags": {
              "Name": "wp_igw"
            },
            "vpc_id": "vpc-0c2f25bd7ec679d6a"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ff6624eedd4e57de",
            "owner_id": "058625519174",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09c667268598b8a16",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wp_public"
            },
            "vpc_id": "vpc-0c2f25bd7ec679d6a"
          },
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_private1_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3b5e77a59e2016b",
            "route_table_id": "rtb-092b95b5648712503",
            "subnet_id": "subnet-01c64e2712bd3c55d"
          },
          "dependencies": [
            "aws_default_route_table.wp_private_rt",
            "aws_subnet.wp_private1_subnet",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_private2_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0abd0b7a55ca6ecf0",
            "route_table_id": "rtb-092b95b5648712503",
            "subnet_id": "subnet-0dbdb582f203db5a3"
          },
          "dependencies": [
            "aws_default_route_table.wp_private_rt",
            "aws_subnet.wp_private2_subnet",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_public2_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ad5fd1544676ea3",
            "route_table_id": "rtb-0ff6624eedd4e57de",
            "subnet_id": "subnet-0171529a4d619172e"
          },
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_route_table.wp_public_rt",
            "aws_subnet.wp_public2_subnet",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_public_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077402216e6d306fa",
            "route_table_id": "rtb-0ff6624eedd4e57de",
            "subnet_id": "subnet-05cb45b74e0e8ca33"
          },
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_route_table.wp_public_rt",
            "aws_subnet.wp_public1_subnet",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_dev_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058625519174:security-group/sg-076224e5115c8802c",
            "description": "Used for access to the dev instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076224e5115c8802c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "3.91.87.117/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "wp_dev_sg",
            "name_prefix": null,
            "owner_id": "058625519174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c2f25bd7ec679d6a"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_private_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058625519174:security-group/sg-0c17e6b6adb6a8a12",
            "description": "Used for private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c17e6b6adb6a8a12",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.7.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "wp_private_sg",
            "name_prefix": null,
            "owner_id": "058625519174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c2f25bd7ec679d6a"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058625519174:security-group/sg-06ee1ae75a5eda40c",
            "description": "Used for public and private instances for load balancer access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ee1ae75a5eda40c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wp_public_sg",
            "name_prefix": null,
            "owner_id": "058625519174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c2f25bd7ec679d6a"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_rds_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058625519174:security-group/sg-0d7984888782bc733",
            "description": "Used for DB instances",
            "egress": [],
            "id": "sg-0d7984888782bc733",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06ee1ae75a5eda40c",
                  "sg-076224e5115c8802c",
                  "sg-0c17e6b6adb6a8a12"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wp_rds_sg",
            "name_prefix": null,
            "owner_id": "058625519174",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0c2f25bd7ec679d6a"
          },
          "dependencies": [
            "aws_security_group.wp_dev_sg",
            "aws_security_group.wp_private_sg",
            "aws_security_group.wp_public_sg",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_private1_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058625519174:subnet/subnet-01c64e2712bd3c55d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.7.3.0/24",
            "id": "subnet-01c64e2712bd3c55d",
            "map_public_ip_on_launch": false,
            "owner_id": "058625519174",
            "tags": {
              "Name": "wp_private1"
            },
            "vpc_id": "vpc-0c2f25bd7ec679d6a"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_private2_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058625519174:subnet/subnet-0dbdb582f203db5a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.7.4.0/24",
            "id": "subnet-0dbdb582f203db5a3",
            "map_public_ip_on_launch": false,
            "owner_id": "058625519174",
            "tags": {
              "Name": "wp_private2"
            },
            "vpc_id": "vpc-0c2f25bd7ec679d6a"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_public1_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058625519174:subnet/subnet-05cb45b74e0e8ca33",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.7.1.0/24",
            "id": "subnet-05cb45b74e0e8ca33",
            "map_public_ip_on_launch": true,
            "owner_id": "058625519174",
            "tags": {
              "Name": "wp_public1"
            },
            "vpc_id": "vpc-0c2f25bd7ec679d6a"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_public2_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058625519174:subnet/subnet-0171529a4d619172e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.7.2.0/24",
            "id": "subnet-0171529a4d619172e",
            "map_public_ip_on_launch": true,
            "owner_id": "058625519174",
            "tags": {
              "Name": "wp_public2"
            },
            "vpc_id": "vpc-0c2f25bd7ec679d6a"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_rds1_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058625519174:subnet/subnet-092be5fc196d6e4a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.7.5.0/24",
            "id": "subnet-092be5fc196d6e4a4",
            "map_public_ip_on_launch": false,
            "owner_id": "058625519174",
            "tags": {
              "Name": "wp_rds1"
            },
            "vpc_id": "vpc-0c2f25bd7ec679d6a"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_rds2_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058625519174:subnet/subnet-059b19beeae2eeabb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.7.6.0/24",
            "id": "subnet-059b19beeae2eeabb",
            "map_public_ip_on_launch": false,
            "owner_id": "058625519174",
            "tags": {
              "Name": "wp_rds2"
            },
            "vpc_id": "vpc-0c2f25bd7ec679d6a"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_rds3_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058625519174:subnet/subnet-013d990d3c21345e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.7.7.0/24",
            "id": "subnet-013d990d3c21345e2",
            "map_public_ip_on_launch": false,
            "owner_id": "058625519174",
            "tags": {
              "Name": "wp_rds3"
            },
            "vpc_id": "vpc-0c2f25bd7ec679d6a"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wp_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058625519174:vpc/vpc-0c2f25bd7ec679d6a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.7.0.0/16",
            "default_network_acl_id": "acl-069753f754316995f",
            "default_route_table_id": "rtb-092b95b5648712503",
            "default_security_group_id": "sg-0fe4fbf51b8ccbbee",
            "dhcp_options_id": "dopt-e134d88d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c2f25bd7ec679d6a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-092b95b5648712503",
            "owner_id": "058625519174",
            "tags": {
              "Name": "wp_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "wp_private-s3_endpoint",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "54.231.0.0/17",
              "52.216.0.0/15"
            ],
            "id": "vpce-08656137a831f2351",
            "owner_id": "058625519174",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-092b95b5648712503",
              "rtb-0ff6624eedd4e57de"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0c2f25bd7ec679d6a"
          },
          "dependencies": [
            "aws_route_table.wp_public_rt",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    }
  ]
}